--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "twrnc": "^4.5.0"
